Initial deployment of diun & radarr labels for testing

--- a/docker/stacks/radarr/compose.yaml
+++ b/docker/stacks/radarr/compose.yaml
@@ -27,6 +27,7 @@ services:
       - PGID=1000
       - TZ=${TIMEZONE}
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.radarr.entrypoints: websecure
