--- a/docker/stacks/diun/compose.yaml
+++ b/docker/stacks/diun/compose.yaml
@@ -11,7 +11,7 @@ services:
       DIUN_WATCH_SCHEDULE: 0 */6 * * *
       DIUN_WATCH_JITTER: 30s
       DIUN_PROVIDERS_DOCKER: true
-      DIUN_NOTIF_NTFY_ENDPOINT: ${NTFY_URL_PREFIX:-ntfy.}${NETWORK_DOMAIN}
+      DIUN_NOTIF_NTFY_ENDPOINT: https://${NTFY_URL_PREFIX:-ntfy.}${NETWORK_DOMAIN}
       # DIUN_NOTIF_NTFY_TOKEN: 
       # DIUN_NOTIF_NTFY_TOKENFILE: 
       DIUN_NOTIF_NTFY_TOPIC: diun
