Add diun to github-pages for manually-triggerable testing

--- a/docker/stacks/github-pages/compose.yaml
+++ b/docker/stacks/github-pages/compose.yaml
@@ -11,6 +11,7 @@ services:
     volumes:
       - /srv/jekotia.github.io:/site
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.github-pages.entrypoints: websecure
