--- a/docker/stacks/actualbudget/compose.yaml
+++ b/docker/stacks/actualbudget/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   actualbudget:
-    image: ghcr.io/actualbudget/actual-server:25.3.1@sha256:58fecd9088b73ffe402450f51eff488036cdc8ca570650be38ad2bbabbfe193b
+    image: ghcr.io/actualbudget/actual:25.3.1@sha256:58fecd9088b73ffe402450f51eff488036cdc8ca570650be38ad2bbabbfe193b
     container_name: actualbudget
     restart: unless-stopped
     networks:
