--- a/docker/stacks/diun/komodo.toml
+++ b/docker/stacks/diun/komodo.toml
@@ -7,6 +7,8 @@ links = [
     "https://github.com/crazy-max/diun",
     "https://github.com/crazy-max/diun/pkgs/container/diun"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
