emulator-source-backups: Bump & pin to v1.24.0. Watch with diun.

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -4,5 +4,7 @@ defaults:
     - ^development.*
     - ^edge.*
     - ^nightly.*
+    - .*nightly$
+    - .*nightly-rootless$
     - ^pr-.*
     - ^sha.*
