foundry: Bump & pin to v13.345.0. Watch with diun.

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -1,8 +1,12 @@
 defaults:
   excludeTags:
     - ^arm64.*
+    - ^dependabot-.*
+    - ^develop$
     - ^development.*
-    - ^edge.*
+    - ^edge$
+    - ^fix-issue-.*
+    - ^nightly$
     - ^nightly.*
     - .*nightly$
     - .*nightly-rootless$
