github-pages: stop watching with diun. Add relevant links to komodo definition. auto-update with komodo.

--- a/docker/stacks/github-pages/compose.yaml
+++ b/docker/stacks/github-pages/compose.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - /srv/jekotia.github.io:/site
     labels:
-      diun.enable: "true"
+      # diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.github-pages.entrypoints: websecure
