--- a/docker/stacks/homepage/compose.yaml
+++ b/docker/stacks/homepage/compose.yaml
@@ -4,7 +4,7 @@ include:
   
 services:
   homepage:
-    image: ghcr.io/gethomepage/homepage:v1.3.2@sha256:4f923bf0e9391b3a8bc5527e539b022e92dcc8a3a13e6ab66122ea9ed030e196
+    image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
     restart: always
     networks:
@@ -20,6 +20,7 @@ services:
       PGID: ${GID:-1000}
       HOMEPAGE_ALLOWED_HOSTS: ${HOMEPAGE_URL_PREFIX:-homepage.}${NETWORK_DOMAIN}
     labels:
+      # diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.homepage.entrypoints: websecure
@@ -43,6 +44,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
     restart: always
+    # labels:
+    #   diun.enable: "true"
 
 networks:
   homepage.dockerproxy:
