--- a/docker/stacks/homepage/komodo.toml
+++ b/docker/stacks/homepage/komodo.toml
@@ -8,6 +8,8 @@ links = [
   "https://github.com/gethomepage/homepage",
   "https://github.com/gethomepage/homepage/pkgs/container/homepage"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
