karakeep: watch with diun

--- a/docker/stacks/karakeep/app.yaml
+++ b/docker/stacks/karakeep/app.yaml
@@ -27,6 +27,7 @@ services:
       MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.karakeep.entrypoints: websecure
