lidarr: Bump & pin to v2.12.4.4658. Watch with diun.

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -4,6 +4,8 @@ defaults:
     - .*arm64$
     - ^dependabot-.*
     - ^develop$
+    - ^develop.*
+    - .*develop$
     - ^development.*
     - ^edge$
     - ^fix-issue-.*
