--- a/docker/stacks/logforge/backend.yaml
+++ b/docker/stacks/logforge/backend.yaml
@@ -14,3 +14,5 @@ services:
     restart: always
     ports:
       - "${EXPOSED_BACKEND_PORT:-8000}:${BACKEND_SERVICE_PORT:-8000}"
+    labels:
+      diun.enable: "true"
