--- a/docker/stacks/mylar/compose.yaml
+++ b/docker/stacks/mylar/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   mylar:
-    image: ghcr.io/linuxserver/mylar3:version-v0.8.1.1@sha256:7f6f60f6c982167fa73db719cc248821ed61dfafa6dfade65bddefd905b679ab
+    image: ghcr.io/linuxserver/mylar3:version-v0.8.2-ls204@sha256:173f7895246dcddd4150a1cf55dd924e494557dd8d62e539aaef90849a8e9b58
     container_name: mylar
     restart: unless-stopped
     networks:
@@ -17,6 +17,7 @@ services:
       - PGID=1000
       - TZ=${TIMEZONE}
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.mylar.entrypoints: websecure
