nextcloud: properly tag collabora office image. Watch main app image with diun.

--- a/docker/stacks/nextcloud/app.yaml
+++ b/docker/stacks/nextcloud/app.yaml
@@ -37,6 +37,7 @@ services:
       - office
       - proxy_private
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.nextcloud.entrypoints: websecure
