ntfy: watch with diun

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -2,6 +2,9 @@ defaults:
   excludeTags:
     - ^arm64.*
     - .*arm64$
+    - .*armv6$
+    - .*armv7$
+    - .*arm64v8$
     - ^dependabot-.*
     - ^develop$
     - ^develop.*
