--- a/docker/stacks/omni-tools/komodo.toml
+++ b/docker/stacks/omni-tools/komodo.toml
@@ -8,6 +8,8 @@ links = [
   "https://github.com/iib0011/omni-tools",
   "https://hub.docker.com/r/iib0011/omni-tools"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
