orb: auto-update with komodo

--- a/docker/stacks/orb/komodo.toml
+++ b/docker/stacks/orb/komodo.toml
@@ -7,6 +7,8 @@ links = [
   "https://orb.net/docs/setup-sensor/docker",
   "https://hub.docker.com/r/orbforge/orb"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
