paperless: Bump & pin to v2.16.3. Watch with diun.

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -6,11 +6,14 @@ defaults:
     - .*armv7$
     - .*arm64v8$
     - ^dependabot-.*
+    - ^dev$
     - ^develop$
     - ^develop.*
     - .*develop$
     - ^development.*
     - ^edge$
+    - ^feature-.*
+    - ^fix.*
     - ^fix-issue-.*
     - ^nightly$
     - ^nightly.*
