plexms: Bump & pin to version-1.41.8.9834-071366d65. watch with diun

--- a/docker/stacks/plexms/compose.yaml
+++ b/docker/stacks/plexms/compose.yaml
@@ -80,6 +80,7 @@ services:
       VERSION: ${VERSION}
     #?- UMASK_SET=022
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.plexms.entrypoints: websecure
