plextraktsync: Bump & pin to v0.34.11. Watch with diun. Change environment syntax for consistency. Add vars with defaults for PUID and PGID.

--- a/docker/stacks/plextraktsync/komodo.toml
+++ b/docker/stacks/plextraktsync/komodo.toml
@@ -15,4 +15,7 @@ run_directory = "docker/stacks/plextraktsync/"
 file_paths = ["compose.yaml"]
 environment = """
 TIMEZONE=[[TIMEZONE]]
+
+# UID=
+# GID=
 """
