--- a/docker/stacks/qbittorrent/compose.yaml
+++ b/docker/stacks/qbittorrent/compose.yaml
@@ -3,7 +3,7 @@ include:
   
 services:
   qbittorrent:
-    image: ghcr.io/linuxserver/qbittorrent:5.1.0@sha256:0a3ef7232ee85777303fc794c3ff96743235812d185b506fe089e873fa2f6bbf
+    image: ghcr.io/linuxserver/qbittorrent:5.1.0-r0-ls397@sha256:22dc2f60b6253356005b6cbb77ea282c788aa9ffb828ca61c43479735913e02c
     container_name: qbittorrent
     restart: unless-stopped
     networks:
@@ -15,12 +15,13 @@ services:
     - /mnt/storage/multimedia:/multimedia
     - /mnt/storage/application_data/qbittorrent/app/config:/config
     environment:
-    - PUID=${UID:-568}
-    - PGID=${GID:-1001}
-    - TZ=America/Toronto
-    - WEBUI_PORT=8080
+      PUID: ${UID:-568}
+      PGID: ${GID:-1001}
+      TZ: America/Toronto
+      WEBUI_PORT: 8080
     #?- UMASK_SET=022
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.qbittorrent.entrypoints: websecure
