--- a/docker/stacks/radarr/komodo.toml
+++ b/docker/stacks/radarr/komodo.toml
@@ -29,4 +29,7 @@ RADARR_DISCORD_WEBHOOK=https://discord.com/api/webhooks/1129554499288186943/3vT6
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
