readarr: Bump & pin to develop-0.4.17.2801-ls155. Watch with diun. Change environment syntax for consistency. Add UID & PID vars with default values.

--- a/docker/stacks/readarr/komodo.toml
+++ b/docker/stacks/readarr/komodo.toml
@@ -27,4 +27,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
