--- a/docker/stacks/readarr/compose.yaml
+++ b/docker/stacks/readarr/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   readarr:
-    image: ghcr.io/linuxserver/readarr:develop-0.4.10.2734-ls143@sha256:f7cdb1419ee861df7b9716e2c4cb7b321ff6431c31ced2bfbe2ed9e81d67efa9
+    image: ghcr.io/linuxserver/readarr:develop-0.4.17.2801-ls155@sha256:d71c575745ab4579ae0dbb4f91244cf9a74d7085d28a927218146466f8e6418c
     container_name: readarr
     restart: unless-stopped
     networks:
@@ -14,10 +14,12 @@ services:
       - /srv/application_data/readarr/app/config:/config
       - readarr.data.mediacover:/config/MediaCover
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
+      diun.enable: "true"
+      diun.include_tags: "develop-.*"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.readarr.entrypoints: websecure
