--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -1,27 +1,27 @@
 defaults:
   excludeTags:
     - ^alpine-sts$
-    - ^arm64.*
+    - ^arm64-.*
     - .*-arm-.*
     - .*-arm64-.*
-    - .*arm64$
-    - .*arm64v8$
-    - .*armv6$
-    - .*armv7$
+    - .*-arm64$
+    - .*-arm64v8$
+    - .*-armv6$
+    - .*-armv7$
     - ^dependabot-.*
     - ^dev$
     - ^develop$
-    - ^develop.*
-    - .*develop$
+    - ^develop-.*
+    - .*-develop$
     - ^development.*
     - ^edge$
     - ^feature-.*
-    - ^fix.*
+    - ^fix-.*
     - ^fix-issue-.*
     - ^nightly$
-    - ^nightly.*
-    - .*nightly$
-    - .*nightly-rootless$
+    - ^nightly-.*
+    - .*-nightly$
+    - .*-nightly-rootless$
     - .*-ppc64le$
     - .*-ppc64le-.*
     - ^pr-.*
