--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -1,30 +1,31 @@
 defaults:
   excludeTags:
-    - ^alpine-sts$
-    - ^arm64-.*
+    - alpine-sts
+    - arm64-.*
     - .*-arm-.*
     - .*-arm64-.*
-    - .*-arm64$
-    - .*-arm64v8$
-    - .*-armv6$
-    - .*-armv7$
-    - ^dependabot-.*
-    - ^dev$
-    - ^develop$
-    - ^develop-.*
-    - .*-develop$
-    - ^development.*
-    - ^edge$
-    - ^feature-.*
-    - ^fix-.*
-    - ^fix-issue-.*
-    - ^nightly$
-    - ^nightly-.*
-    - .*-nightly$
-    - .*-nightly-rootless$
-    - .*-ppc64le$
+    - .*-arm64
+    - .*-arm64v8
+    - .*-armv6
+    - .*-armv7
+    - commit-.*
+    - dependabot-.*
+    - dev
+    - develop
+    - develop-.*
+    - .*-develop
+    - development.*
+    - edge
+    - feature-.*
+    - fix-.*
+    - fix-issue-.*
+    - nightly
+    - nightly-.*
+    - .*-nightly
+    - .*-nightly-rootless
+    - .*-ppc64le
     - .*-ppc64le-.*
-    - ^pr-.*
-    - ^sha.*
-    - ^sts$
+    - pr-.*
+    - sha.*
+    - sts
     - .*-windows.*
