diun: add missed tag to exclude for immich-machine-learning

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -19,6 +19,7 @@ defaults:
     - feature-.*
     - fix-.*
     - fix-issue-.*
+    - improvement_
     - nightly
     - nightly-.*
     - .*-nightly
