diun: ignore platform-specific tags for amd64

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -1,6 +1,9 @@
 defaults:
   excludeTags:
     - alpine-sts
+    - amd64-.*
+    - .*-amd64
+    - .*-amd64-.*
     - arm64-.*
     - .*-arm-.*
     - .*-arm64-.*
