--- a/docker/stacks/requestrr/compose.yaml
+++ b/docker/stacks/requestrr/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   requestrr:
-    image: darkalfx/requestrr:2.1.3@sha256:f83fac75f8564d8ebeebfb3b2e964def96f3a9737d55f2142c3de7243c991d7d
+    image: thomst08/requestrr:2.1.8@sha256:e1a46220133ae6a92ca3da749b882dcea14279600849cf4c41b4c7c140fde777
     container_name: requestrr
     restart: unless-stopped
     networks:
@@ -11,6 +11,7 @@ services:
     volumes:
       - /srv/application_data/requestrr/app/config:/root/config
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.requestrr.entrypoints: websecure
