resilio-sync: Bump & pin to v3.0.3.1065-1-ls213. Watch with diun. Change environment syntax for consistency. Add vars for UID & GID with defaults.

--- a/docker/stacks/resilio-sync/komodo.toml
+++ b/docker/stacks/resilio-sync/komodo.toml
@@ -26,4 +26,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 SMB_ARCHIVE_HOST=[[RESILIO_SYNC_SMB_HOST]]
 SMB_ARCHIVE_USER=[[RESILIO_SYNC_SMB_USER]]
 SMB_ARCHIVE_PASS=[[RESILIO_SYNC_SMB_PASS]]
+
+# UID=
+# GID=
 """
