--- a/docker/stacks/resilio-sync/compose.yaml
+++ b/docker/stacks/resilio-sync/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   resilio-sync:
-    image: ghcr.io/linuxserver/resilio-sync:2.7.3@sha256:a6c055059e706277a5c82cba541063fa1f8471cda3c500a3e737ca17d087b95a
+    image: ghcr.io/linuxserver/resilio-sync:3.0.3.1065-1-ls213@sha256:9f330ccf779a53e651bbbb9dbcdaf703a6f591c94900493ee9a54b820368f1df
     container_name: resilio-sync
     restart: unless-stopped
     networks:
@@ -14,10 +14,11 @@ services:
       - /srv/application_data/resilio-sync/app/config:/config
       - smb.archive:/sync/archive
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.resilio-sync.entrypoints: websecure
