--- a/docker/stacks/rustdesk/komodo.toml
+++ b/docker/stacks/rustdesk/komodo.toml
@@ -7,6 +7,8 @@ links = [
     "https://github.com/rustdesk/rustdesk",
     "https://hub.docker.com/r/rustdesk/rustdesk-server"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
