sonarr: Bump & pin to v4.0.14.2939-ls284. Watch with diun.

--- a/docker/stacks/diun/config/diun.yaml
+++ b/docker/stacks/diun/config/diun.yaml
@@ -19,6 +19,7 @@ defaults:
     - develop
     - develop-.*
     - .*-develop
+    - .*-develop-.*
     - development.*
     - edge
     - feature-.*
