--- a/docker/stacks/sonarr/compose.yaml
+++ b/docker/stacks/sonarr/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   sonarr:
-    image: ghcr.io/linuxserver/sonarr:4.0.13.2932-ls272@sha256:4dfedb2598dc6bd51c40f4ecea2631dbe367840678ab109cd968f821d81a5327
+    image: ghcr.io/linuxserver/sonarr:4.0.14.2939-ls284@sha256:4dfedb2598dc6bd51c40f4ecea2631dbe367840678ab109cd968f821d81a5327
     container_name: sonarr
     restart: unless-stopped
     networks:
@@ -25,6 +25,7 @@ services:
       - PGID=1000
       - TZ=${TIMEZONE}
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.sonarr.entrypoints: websecure
