--- a/docker/stacks/stirlingpdf/compose.yaml
+++ b/docker/stacks/stirlingpdf/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   stirlingpdf:
-    image: ghcr.io/stirling-tools/stirling-pdf:0.46.2@sha256:396ca949b81198a65b9abfec38518fa44e871b1970dad9f9718ffd030eef9b92
+    image: ghcr.io/stirling-tools/stirling-pdf:latest
     container_name: stirlingpdf
     restart: unless-stopped
     environment:
