--- a/docker/stacks/stirlingpdf/komodo.toml
+++ b/docker/stacks/stirlingpdf/komodo.toml
@@ -8,6 +8,8 @@ links = [
   "https://github.com/Stirling-Tools/Stirling-PDF",
   "https://github.com/Stirling-Tools/Stirling-PDF/pkgs/container/stirling-pdf"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
