uptime-kuma: Switch komodo links to correct registry. Watch with diun.

--- a/docker/stacks/uptime-kuma/compose.yaml
+++ b/docker/stacks/uptime-kuma/compose.yaml
@@ -12,6 +12,7 @@ services:
     volumes:
       - /srv/application_data/uptime-kuma/app/data:/app/data
     labels:
+      diun.enable: "true"
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.uptime-kuma.entrypoints: websecure
