--- a/docker/stacks/vscodium/komodo.toml
+++ b/docker/stacks/vscodium/komodo.toml
@@ -8,6 +8,8 @@ links = [
   "https://github.com/linuxserver/docker-vscodium",
   "https://github.com/linuxserver/docker-vscodium/pkgs/container/vscodium"
 ]
+poll_for_updates = true
+auto_update = true
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
