--- a/docker/stacks/mylar/compose.yaml
+++ b/docker/stacks/mylar/compose.yaml
@@ -13,9 +13,9 @@ services:
       - smb.multimedia:/multimedia
       - /srv/application_data/mylar/app/config:/config
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
       diun.enable: "true"
       traefik.enable: "true"
