--- a/docker/stacks/mylar/komodo.toml
+++ b/docker/stacks/mylar/komodo.toml
@@ -27,4 +27,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
