--- a/docker/stacks/prowlarr/compose.yaml
+++ b/docker/stacks/prowlarr/compose.yaml
@@ -11,9 +11,9 @@ services:
     volumes:
       - /srv/application_data/prowlarr/app/config:/config
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
       diun.enable: "true"
       traefik.enable: "true"
