sonarr: Change environment syntax for consistency. Add vars for UID & GID with defaults.

--- a/docker/stacks/sonarr/komodo.toml
+++ b/docker/stacks/sonarr/komodo.toml
@@ -29,4 +29,7 @@ SONARR_DISCORD_WEBHOOK=https://discord.com/api/webhooks/1129554718256005161/1yiJ
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
