--- a/docker/stacks/sonarr/compose.yaml
+++ b/docker/stacks/sonarr/compose.yaml
@@ -16,14 +16,14 @@ services:
       #- $USERDIR/docker/shared/mp4_automator:/config_mp4_automator
       - /srv/application_data/arr-discord-notifier/arr-discord-notifier.sh:/app/arr-discord-notifier.sh:ro
     environment:
-      - DISCORD_WEBHOOK=${SONARR_DISCORD_WEBHOOK}
-      - AUTHOR_NAME=Sonarr
-      - DROP_FIELDS="rating,genres,cast,links,backdrop,release,overview,codecs"
-      - DOCKER_MODS=linuxserver/mods:universal-package-install
-      - INSTALL_PACKAGES=grep
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
+      DISCORD_WEBHOOK: ${SONARR_DISCORD_WEBHOOK}
+      AUTHOR_NAME: Sonarr
+      DROP_FIELDS: "rating,genres,cast,links,backdrop,release,overview,codecs"
+      DOCKER_MODS: linuxserver/mods:universal-package-install
+      INSTALL_PACKAGES: grep
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
     labels:
       diun.enable: "true"
       traefik.enable: "true"
