--- a/docker/stacks/tdarr-server/komodo.toml
+++ b/docker/stacks/tdarr-server/komodo.toml
@@ -29,4 +29,7 @@ TDARR_NODE_NAME=Hyperion
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
