--- a/docker/stacks/vscodium/compose.yaml
+++ b/docker/stacks/vscodium/compose.yaml
@@ -13,17 +13,18 @@ services:
       - seccomp:unconfined #optional
     shm_size: "1gb"
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TIMEZONE}
-      - PROXY_DOMAIN=${VSCODIUM_URL_PREFIX:-vscodium.}${NETWORK_DOMAIN} #optional
-      - DEFAULT_WORKSPACE=/srv/repositories
-      - TITLE=vscodium
-      - NODECOR=true
+      PUID: ${UID:-1000}
+      PGID: ${GID:-1000}
+      TZ: ${TIMEZONE}
+      PROXY_DOMAIN: ${VSCODIUM_URL_PREFIX:-vscodium.}${NETWORK_DOMAIN} #optional
+      DEFAULT_WORKSPACE: /srv/repositories
+      TITLE: vscodium
+      NODECOR: true
     volumes:
       - /srv/application_data/vscodium/app/config:/config
       - /srv/repositories:/srv/repositories
       - /home/jekotia/.zsh:/srv/zsh
+      - /srv/application_data/homepage/app/config:/srv/application_data/homepage/app/config
       # - /home/jekotia/ssh/id_jameli:/config/.ssh/id_rsa #ssh key for GitHub integration
     networks:
       - proxy_private
